--- a/public/profile.html
+++ b/public/profile.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile - JWT Auth Demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>User Profile</h1>
-    <div id="profile-info"></div>
-    <p id="error-message" class="error"></p>
-    <button id="logout">Logout</button>
-    <p><a href="/login">Back to Login</a></p>
+  <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card shadow-sm p-4" style="max-width: 400px; width: 100%;">
+      <h2 class="text-center mb-4">User Profile</h2>
+      <div id="profile-info" class="mb-3"></div>
+      <div id="alert-message" class="mb-3"></div>
+      <button id="logout" class="btn btn-secondary w-100 mb-3">Logout</button>
+      <p class="text-center"><a href="/login">Back to Login</a></p>
+    </div>
   </div>
   <script src="/js/profile.js"></script>
 </body>
